--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
   test:
     name: Test & Lint
     runs-on: ubuntu-latest
-    
+
     services:
       mongodb:
         image: mongo:6.0
@@ -33,6 +33,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Verify package-lock.json exists
+        # Added to fail fast if lock file is missing
+        run: |
+          if [ ! -f package-lock.json ]; then
+            echo "Error: package-lock.json not found. Run 'npm install' locally and commit the lock file."
+            exit 1
+          fi
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -40,6 +48,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
+        # Run npm ci at root for monorepo to install all package dependencies
         run: npm ci
 
       - name: Lint codebase
@@ -52,7 +61,7 @@ jobs:
       - name: Run backend tests
         working-directory: packages/server
         env:
-          # Replaced hardcoded values with GitHub Secrets mirroring Vercel
+          # GitHub Secrets mirroring Vercel environment variables
           MONGO_URI: ${{ secrets.TEST_MONGO_URI }}
           REDIS_URL: ${{ secrets.TEST_REDIS_URL }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
@@ -76,7 +85,6 @@ jobs:
       - name: Run frontend tests
         working-directory: packages/client
         env:
-          # Use secrets for client variables
           VITE_GRAPHQL_URL: ${{ secrets.VITE_GRAPHQL_URL }}
           VITE_WS_URL: ${{ secrets.VITE_WS_URL }}
           VITE_STRIPE_PUBLISHABLE_KEY: ${{ secrets.VITE_STRIPE_PUBLISHABLE_KEY }}
@@ -107,6 +115,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Verify package-lock.json exists
+        run: |
+          if [ ! -f package-lock.json ]; then
+            echo "Error: package-lock.json not found. Run 'npm install' locally and commit the lock file."
+            exit 1
+          fi
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -140,6 +155,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Verify package-lock.json exists
+        run: |
+          if [ ! -f package-lock.json ]; then
+            echo "Error: package-lock.json not found. Run 'npm install' locally and commit the lock file."
+            exit 1
+          fi
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -152,7 +174,6 @@ jobs:
       - name: Start backend
         working-directory: packages/server
         env:
-          # Use secrets for all backend variables
           MONGO_URI: ${{ secrets.TEST_MONGO_URI }}
           REDIS_URL: ${{ secrets.TEST_REDIS_URL }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
@@ -207,6 +228,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Verify package-lock.json exists
+        run: |
+          if [ ! -f package-lock.json ]; then
+            echo "Error: package-lock.json not found. Run 'npm install' locally and commit the lock file."
+            exit 1
+          fi
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -232,7 +260,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          # Pass environment variables to Docker build
           build-args: |
             MONGO_URI=${{ secrets.MONGO_URI }}
             REDIS_URL=${{ secrets.REDIS_URL }}
@@ -293,7 +320,6 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: packages/client
-          # Ensure Vercel pulls environment variables from its secrets
           env: |
             VITE_GRAPHQL_URL=${{ secrets.VITE_GRAPHQL_URL }}
             VITE_WS_URL=${{ secrets.VITE_WS_URL }}
@@ -349,5 +375,5 @@ jobs:
         with:
           status: ${{ needs.deploy-production.result }}
           channel: '#deployments'
-          webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}  # Updated to match variable name
+          webhook_url: ${{ secrets.SLACK_WEBHOOK_URL }}
           fields: repo,message,commit,author,action,eventName,ref,workflow
