--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,13 +7,14 @@
     "preview": "vite preview",
     "test": "jest",
     "test:e2e": "cypress run",
-    "lint": "eslint src/**/*.{ts,tsx}",
-    "deploy": "npm run build && vercel --prod"
+    "lint": "eslint src/**/*.{ts,tsx} --fix",
+    "deploy": "vite build && vercel --prod"
   },
   "dependencies": {
     "@apollo/client": "^3.8.0",
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.0",
+    "@stripe/stripe-js": "^2.0.0",
     "framer-motion": "^10.16.0",
     "graphql": "^16.8.0",
     "lodash": "^4.17.0",
@@ -25,16 +26,20 @@
     "recharts": "^2.8.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.0",
     "cypress": "^13.0.0",
+    "eslint": "^8.0.0",
     "jest": "^29.6.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.1.0",
     "vite": "^4.4.0"
-  }
+  },
+  "packageManager": "npm@10.8.2"
 }
