--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,19 +7,18 @@
     "start": "node dist/index.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "eslint src/**/*.ts",
-    "deploy": "npm run build && pm2 restart ecosystem.config.js"
+    "lint": "eslint src/**/*.ts --fix",
+    "deploy": "tsc && pm2 restart ecosystem.config.js"
   },
   "dependencies": {
     "@apollo/server": "^4.9.0",
     "@graphql-tools/schema": "^10.0.0",
+    "@solana/web3.js": "^1.78.0",
     "apollo-server-express": "^3.12.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.0",
     "ethers": "^5.7.2",
-    "@solana/web3.js": "^1.78.0",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "graphql": "^16.8.0",
@@ -45,10 +44,12 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.5.0",
     "@types/ws": "^8.5.5",
+    "eslint": "^8.0.0",
     "jest": "^29.6.0",
     "nodemon": "^3.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.0",
     "typescript": "^5.1.0"
-  }
+  },
+  "packageManager": "npm@10.8.2"
 }
