--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,9 +5,16 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "test": "jest",
+    "lint": "eslint src/**/*.ts --fix"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "eslint": "^8.0.0",
+    "jest": "^29.6.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
-  }
+  },
+  "packageManager": "npm@10.8.2"
 }
