--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,56 +1,24 @@
 {
-  "name": "@omniauthor/server",
+  "name": "omniauthor-server",
   "version": "1.0.0",
+  "description": "OmniAuthor Pro Server",
+  "main": "dist/server.js",
   "scripts": {
+    "start": "ts-node src/server.ts",
     "build": "tsc",
-    "dev": "nodemon src/index.ts",
-    "start": "node dist/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint src/**/*.ts --fix",
-    "deploy": "tsc && pm2 restart ecosystem.config.js"
+    "dev": "ts-node-dev src/server.ts"
   },
   "dependencies": {
-    "@apollo/server": "^4.9.0",
-    "@coinbase/coinbase-commerce-node": "^2.0.0",
-    "@graphql-tools/schema": "^10.0.0",
-    "@solana/web3.js": "^1.78.0",
-    "apollo-server-express": "^3.12.0",
-    "bcrypt": "^5.1.0",
-    "compression": "^1.7.4",
+    "@apollo/server": "^4.7.1",
     "cors": "^2.8.5",
-    "ethers": "^5.7.2",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.10.0",
-    "graphql": "^16.8.0",
-    "graphql-subscriptions": "^2.0.0",
-    "graphql-ws": "^5.14.0",
-    "helmet": "^7.0.0",
-    "joi": "^17.9.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.5.0",
-    "openai": "^4.0.0",
-    "prom-client": "^14.2.0",
-    "redis": "^4.6.0",
-    "stripe": "^13.0.0",
-    "winston": "^3.10.0",
-    "ws": "^8.14.0"
+    "graphql": "^16.6.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/jest": "^29.5.0",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.5.0",
-    "@types/ws": "^8.5.5",
-    "eslint": "^8.0.0",
-    "jest": "^29.6.0",
-    "nodemon": "^3.0.0",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.0",
-    "typescript": "^5.1.0"
-  },
-  "packageManager": "npm@10.8.2"
+    "@types/node": "^18.16.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  }
 }
