--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0",
   "npmClient": "npm",
+  "useWorkspaces": true,
   "command": {
     "publish": {
       "conventionalCommits": true
