--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -30,10 +30,14 @@
     "@types/lodash": "^4.14.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.0",
     "cypress": "^13.0.0",
     "eslint": "^8.0.0",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.6.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
