Add comprehensive frontend components and fix server dependencies
- Created complete React frontend with authentication, dashboard, editor, and collaboration pages
- Added AI-powered floating assistant component
- Implemented responsive design with Tailwind CSS and Framer Motion animations
- Fixed server model naming conflicts and added missing services
- Created subscription, email, and analytics services
- Added validation utilities and blockchain transaction models
- Fixed mobile package test configuration
- Updated dependencies and resolved import issues

--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "echo 'Mobile dev'",
     "build": "echo 'Mobile build'",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "lint": "echo 'No TypeScript files to lint in mobile package'"
   },
   "devDependencies": {
