Add missing Docker files and fix package configurations
- Add nginx.conf for client Docker builds with SPA routing and security headers
- Add healthcheck.js for server Docker health checks
- Update server Dockerfile to copy healthcheck.js properly
- Complete mobile package.json with Expo/React Native configuration
- Add comprehensive workflow fixes documentation

These fixes resolve critical Docker build failures and package configuration issues.

--- a/packages/server/Dockerfile
+++ b/packages/server/Dockerfile
@@ -49,6 +49,7 @@ RUN npm ci --only=production && npm cache clean --force
 # Copy built application
 COPY --from=builder --chown=omniauthor:nodejs /app/packages/server/dist ./dist
 COPY --from=builder --chown=omniauthor:nodejs /app/packages/shared/dist ./node_modules/@omniauthor/shared/dist
+COPY --from=builder --chown=omniauthor:nodejs /app/packages/server/src/healthcheck.js ./dist/healthcheck.js
 
 
 # Set up health check
