--- a/packages/mobile/package.json
+++ b/packages/mobile/package.json
@@ -1,18 +1,33 @@
 {
   "name": "@omniauthor/mobile",
   "version": "1.0.0",
+  "description": "OmniAuthor Pro Mobile App",
+  "main": "index.js",
   "scripts": {
-    "dev": "echo 'Mobile dev'",
-    "build": "echo 'Mobile build'",
-    "test": "jest --passWithNoTests",
-    "lint": "echo 'No TypeScript files to lint in mobile package'"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "build": "expo build",
+    "dev": "expo start",
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+  },
+  "dependencies": {
+    "@omniauthor/shared": "^1.0.0",
+    "expo": "~49.0.0",
+    "react": "18.2.0",
+    "react-native": "0.72.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.0",
     "jest": "^29.6.0",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.1.0"
+    "typescript": "^5.0.0"
   },
+  "private": true,
   "packageManager": "npm@10.8.2"
 }
